<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nombreClienteEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nombre Cliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numeroClienteEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Número Cliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreClienteEditText" />

    <EditText
        android:id="@+id/productosEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Productos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numeroClienteEditText" />

    <EditText
        android:id="@+id/ciudadEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Ciudad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productosEditText" />

    <EditText
        android:id="@+id/direccionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Dirección"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ciudadEditText" />

    <Button
        android:id="@+id/registrarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrar"
        app:layout_constraintTop_toBottomOf="@id/direccionEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
